# web_scraping

./: .gitignore  README.md  app.py  eco_tourisme.xlsx  eco_tourisme_2.xlsx  main.py  pyproject.toml  setup.py  to_csv.py
helpers/: se_scraper.py
public/: airbnb_calender_scraper.py  wiki_quote.py
scrapers/: accueil_scraper.py  airbnb_calender_scraper.py  ecotourisme.py  scraper.py  wiki_quote.py
scrapers/helpers/: base_scraper.py  se_scraper.py  writer.py
