[tool.poetry]
name = "webscraping"
version = "1.0.0"
description = "directory for the purpose of webscraping projects"
authors = ["jzohdi <jzohdi@terpmail.umd.edu>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
beautifulsoup4 = "^4.9.3"
requests = "^2.24.0"
XlsxWriter = "^1.3.7"
python-dotenv = "^0.15.0"
typing = "^3.7.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
